# target-sherpaan

./: README.md  config.json  pyproject.toml
target_sherpaan/: __init__.py  auth.py  client.py  sinks.py  target.py
