[project]
name = "target-sherpaan"
version = "0.1.0"
description = "Singer target for sending PurchaseOrders to Sherpa API, built with the Meltano Singer SDK."
requires-python = ">=3.9"
dependencies = [
    "singer-sdk~=0.46.4",
    "requests>=2.31.0",
    "tenacity>=9.1.2,<10.0.0",
    "xmltodict>=1.0.2",
]

[project.scripts]
target-sherpaan = 'target_sherpaan.target:TargetSherpaan.cli'

[tool.hatch.build.targets.wheel]
packages = ["target_sherpaan"]

[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

